[package]
name = "torpedo"
version = "0.1.5"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
native-tls = "0.2.7"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
chrono = "0.4.19"
serde_repr = "0.1.6"
torserde_macros = { path = "E:\\Software Projects\\IntelliJ\\torserde_macros" }
torserde = { path = "E:\\Software Projects\\IntelliJ\\torserde" }
ctr = "0.7.0"
aes = "0.7.2"
sha-1 = "0.9.6"
ring = "0.17.0-alpha.10"
rand = "0.8.4"
trace-macro = "1.1.1"